src/css/code.css
/*
* Meshki v0.4.2
* Copyright 2016, Mohammad reza Hajianpour
* http://meshki.borderliner.ir/
* Free to use under the MIT license.
* https://opensource.org/licenses/MIT
*/

/* Code
–––––––––––––––––––––––––––––––––––––––––––––––––– */

/* Single code, default style */
code {
  font-size: 90%;
  white-space: nowrap;
  background-color: transparent;
  color: #E1E1E1;
  border: #E1E1E1 solid 1px;
  border-radius: 5px;
  padding: 1px 5px 1px 5px;
}

/* Single code, filled style */
code.filled {
  background-color: #E1E1E1;
  color: #000;
}

/* pre is used for a block of code */
pre {
  background-color: transparent;
  color: #E1E1E1;
  border: 2px solid #E1E1E1;
  border-radius: 5px;
  overflow-x: auto;
}

/* Filled mode for blocks of code */
pre.filled {
  background-color: #E1E1E1;
  color: #000;
}

/* If the code is the immediate child of pre */
pre > code {
  display: inline;
  white-space: pre;
  border: none;
}

/* If the code is the immediate child of pre with filled mode */
pre.filled > code {
  background-color: #E1E1E1;
  color: #000;
}

